# contoso

./: .gitignore  README.md  pyproject.toml
src/contoso/: index.py
typings/fuzzywuzzy/: StringMatcher.pyi  fuzz.pyi  process.pyi  utils.pyi
