[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contoso-fastapi-service"
version = "0.1.0"
description = "A simple FastAPI service"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.12.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/contoso-fastapi-service"
Issues = "https://github.com/yourusername/contoso-fastapi-service/issues"

[tool.hatch.version]
path = "src/contoso/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/contoso --cov=tests"
no-cov = "cov --no-cov"

[tool.coverage.run]
branch = true
source = [
  "src/contoso",
]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "PL", "T20"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src/contoso"]
